adding java 11 syntax to remove boilerplate code